src/components/article/card.css
@media (min-width: 640px) {
  .articleCard {
    height: 22.5rem;

    .cardImage {
      margin: -3.1rem !important;
    }
  }
}

@media (max-width: 525px) {
  .articleCard {
    .date {
      display: block;
    }

    .changelog {
      display: none;
    }
  }
}

.articleCard:hover {
  .cardImage {
    opacity: 0.75;
  }
}

